[project]
name = "revolve"
version = "0.1.0"
description = "AI rest"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "langgraph",
    "psycopg2",
    "pytest",
    "falcon",
    "pytest-json-report>=1.5.0",
    "langchain-openai>=0.3.15",
    "ipython>=9.2.0",
]

[project.scripts]
revolve = "revolve:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
